name:                dovetail
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/pseudonom/dovetail#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Easley
maintainer:          eric101111@gmail.com
copyright:           2016 Eric Easley
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.Esqueleto.Join
                     , Database.Esqueleto.Join.TH
  build-depends:       base >= 4.7 && < 5
                     , esqueleto
                     , singletons
                     , tagged
                     , template-haskell
                     , th-expand-syns
  default-extensions:  DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TemplateHaskell
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , ViewPatterns
  default-language:    Haskell2010

test-suite dovetail-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Ents1
                       Ents2
                       Ents3
  build-depends:       base
                     , dovetail
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , GADTs
                     , MultiParamTypeClasses
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , TemplateHaskell
                     , TypeFamilies
  build-depends:       base
                     , dovetail
                     , classy-prelude
                     , classy-prelude-yesod
                     , esqueleto
                     , monad-logger
                     , persistent-sqlite

source-repository head
  type:     git
  location: https://github.com/pseudonom/dovetail
